<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.justixdev</groupId>
    <artifactId>eazynick</artifactId>
    <version>0.0.0</version>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>placeholder-api</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>nametagedit</id>
            <url>https://ci.nametagedit.com/plugin/repository/everything/</url>
        </repository>
        <repository>
            <id>releases</id>
            <url>https://repo.cloudnetservice.eu/repository/releases/</url>
        </repository>
        <repository>
            <id>codemc-releases</id>
            <url>https://repo.codemc.org/repository/maven-releases/</url>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.9.0</version>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.19-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>4.1.78.Final</version>
        </dependency>
        <dependency>
            <groupId>com.nametagedit</groupId>
            <artifactId>nametagedit</artifactId>
            <version>4.5.0</version>
        </dependency>
        <dependency>
            <groupId>de.dytanic.cloudnet</groupId>
            <artifactId>cloudnet-api-bridge</artifactId>
            <version>2.1.17</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.skinsrestorer</groupId>
            <artifactId>skinsrestorer-api</artifactId>
            <version>14.2.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.luckperms</groupId>
            <artifactId>api</artifactId>
            <version>5.4</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <scope>system</scope>
            <systemPath>${basedir}/lib/TAB.v3.1.1.jar</systemPath>
            <groupId>me.neznamy</groupId>
            <artifactId>tab</artifactId>
            <version>3.1.1</version>
        </dependency>
        <dependency>
            <scope>system</scope>
            <systemPath>${basedir}/lib/PermissionsEx-1.23.4.jar</systemPath>
            <groupId>ru.tehkode</groupId>
            <artifactId>permissions</artifactId>
            <version>1.23.3</version>
        </dependency>
        <dependency>
            <scope>system</scope>
            <systemPath>${basedir}/lib/spigot-1.7.10-SNAPSHOT-b1657.jar</systemPath>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-1.7.10</artifactId>
            <version>1.7.10-SNAPSHOT-b1657</version>
        </dependency>
        <dependency>
            <scope>system</scope>
            <systemPath>${basedir}/lib/spigot-1.8-R0.1-SNAPSHOT-latest.jar</systemPath>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-1.8.0</artifactId>
            <version>1.8-R0.1-SNAPSHOT-latest</version>
        </dependency>
    </dependencies>
</project>
